--- a/src/main/resources/templates/customer/join.html
+++ b/src/main/resources/templates/customer/join.html
@@ -4,11 +4,11 @@
     <div th:replace="~{/global/form_errors :: formErrorsFragment}"></div>
     <div>
         <span>이름</span>
-        <input type="text" th:field="*{username}" placeholder="이름을 입력해주세요.">
+        <input type="text" th:field="*{name}" placeholder="이름을 입력해주세요.">
     </div>
     <div>
         <span>아이디</span>
-        <input type="text" th:field="*{userId}" placeholder="아이디를 입력해주세요.">
+        <input type="text" th:field="*{username}" placeholder="아이디를 입력해주세요.">
     </div>
     <div>
         <span>비밀번호</span>
