--- a/src/main/resources/templates/customer/login.html
+++ b/src/main/resources/templates/customer/login.html
@@ -1,14 +1,18 @@
 <h1>로그인 페이지</h1>
 
-<form th:object="${loginForm}" method="post">
-    <div th:replace="~{/global/form_errors :: formErrorsFragment}"></div>
+<form th:action="@{/customer/login}" method="post">
+    <div th:if="${param.error}">
+        <div class="alert alert-danger">
+            사용자ID 또는 비밀번호를 확인해 주세요.
+        </div>
+    </div>
     <div>
       <span>아이디</span>
-      <input type="text" th:field="*{userId}" placeholder="아이디를 입력해주세요.">
+      <input type="text" name="username" placeholder="아이디를 입력해주세요.">
     </div>
     <div>
       <span>비밀번호</span>
-      <input type="password" th:field="*{password}">
+      <input type="password" name="password">
     </div>
     <div>
       <input type="submit" value="로그인" />
