--- a/src/main/resources/templates/customer/modify.html
+++ b/src/main/resources/templates/customer/modify.html
@@ -1,10 +1,15 @@
 <h1>회원수정 폼</h1>
 
+
 <form th:action="@{/customer/modify}" th:object="${modifyForm}" method="post">
     <div th:replace="~{/global/form_errors :: formErrorsFragment}"></div>
     <div>
         <span>이름</span>
         <input type="text" th:field="*{name}" placeholder="이름을 입력해주세요.">
+    </div>
+    <div>
+        <span>아이디</span>
+        <input type="text" th:field="*{username}" placeholder="아이디를 입력해주세요.">
     </div>
     <div>
         <span>이메일</span>
