--- a/src/main/resources/templates/customer/profile.html
+++ b/src/main/resources/templates/customer/profile.html
@@ -9,4 +9,6 @@
 <a href="javascript: document.logoutForm.submit();" class="inline-flex" sec:authorize="isAuthenticated()">로그아웃</a>.
 <form name="logoutForm" th:action="@{/customer/logout}" method="post" hidden></form>
 <a href="/customer/modify" class="inline-flex" sec:authorize="isAuthenticated()">정보수정</a>
+<a href="/customer/modifyPassword" class="inline-flex" sec:authorize="isAuthenticated()">비밀번호 변경</a>
+
 
