feat : show Customer data for Modify field

--- a/src/main/resources/templates/customer/login.html
+++ b/src/main/resources/templates/customer/login.html
@@ -19,4 +19,5 @@
     </div>
     <a href="/customer/findUsername" class="inline-flex">아이디 찾기</a>
     <a href="/customer/findPassword" class="inline-flex">비밀번호 찾기</a>
+    <a href="/" class="inline-flex">홈으로</a>
 </form>
