--- a/src/main/resources/templates/customer/modifyPassword.html
+++ b/src/main/resources/templates/customer/modifyPassword.html
@@ -17,5 +17,6 @@
     <div>
         <span>변경하기</span>
         <input type="submit" value="변경하기">
+        <a href="/" class="inline-flex">홈으로</a>
     </div>
 </form>
