--- a/src/main/resources/templates/customer/findPassword.html
+++ b/src/main/resources/templates/customer/findPassword.html
@@ -13,4 +13,5 @@
         <span>찾기</span>
         <input type="submit" value="찾기">
     </div>
+    <a href="/" class="inline-flex">홈으로</a>
 </form>
