--- a/src/main/resources/templates/customer/findUsername.html
+++ b/src/main/resources/templates/customer/findUsername.html
@@ -9,7 +9,8 @@
     <div>
         <span>찾기</span>
         <input type="submit" value="찾기">
-    </div>
+    </div>\
+    <a href="/" class="inline-flex">홈으로</a>
 </form>
 
 <span th:if="${customer != null}" th:text="${customer.username}"></span>
