--- a/src/main/resources/templates/customer/join.html
+++ b/src/main/resources/templates/customer/join.html
@@ -32,5 +32,6 @@
     </div>
     <div>
         <input type="submit" value="회원가입" />
+        <a href="/" class="inline-flex">홈으로</a>
     </div>
 </form>
