--- a/src/main/resources/templates/customer/modify.html
+++ b/src/main/resources/templates/customer/modify.html
@@ -1,29 +1,41 @@
+<script>
+    function modifyConfirm() {
+        if(!confirm("수정하시겠습니까?")) {
+            return false;
+        } else {
+            document.getElementById("modifyForm").submit();
+            alert("수정이 완료되었습니다!");
+        }
+    }
+</script>
+
+
 <h1>회원수정 폼</h1>
 
 
-<form th:action="@{/customer/modify}" th:object="${modifyForm}" method="post">
-    <div th:replace="~{/global/form_errors :: formErrorsFragment}"></div>
+<form id="modifyForm" th:action="@{/customer/modify}" method="post">
     <div>
         <span>이름</span>
-        <input type="text" th:field="*{name}" placeholder="이름을 입력해주세요.">
+        <input type="text" th:value="${c.name}" placeholder="이름을 입력해주세요.">
     </div>
     <div>
         <span>아이디</span>
-        <input type="text" th:field="*{username}" placeholder="아이디를 입력해주세요.">
+        <input type="text" th:value="${c.username}" placeholder="아이디를 입력해주세요.">
     </div>
     <div>
         <span>이메일</span>
-        <input type="text" th:field="*{email}" placeholder="이메일을 입력해주세요.">
+        <input type="text" th:value="${c.email}" placeholder="이메일을 입력해주세요.">
     </div>
     <div>
         <span>주소</span>
-        <input type="text" th:field="*{address}" placeholder="주소를 입력해주세요.">
+        <input type="text" th:value="${c.address}" placeholder="주소를 입력해주세요.">
     </div>
     <div>
         <span>전화번호</span>
-        <input type="text" th:field="*{tel}" placeholder="'-' 뺴고 입력해주세요">
+        <input type="text" th:value="${c.tel}" placeholder="'-' 뺴고 입력해주세요">
     </div>
     <div>
-        <input type="submit" value="수정" />
+        <input type="button" value="수정" onclick="modifyConfirm()"/>
     </div>
+    <a href="/" class="inline-flex">홈으로</a>
 </form>
