--- a/src/main/resources/templates/customer/join.html
+++ b/src/main/resources/templates/customer/join.html
@@ -1,7 +1,41 @@
+<script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
+<script>
+    function checkDuplicateEmail() {
+        var email = document.getElementById("email");
+        var emailValue = email.value;
+        $.ajax({
+            url : "checkEmail",
+            data : {
+                "param" : emailValue
+            },
+            success : function rstData(data) {
+                if(data.id != null) {
+                    alert("즁복된 이메일이 있습니다");
+                    emailValue = "";
+                } else {
+                    alert("사용 가능한 이메일입니다!");
+                }
+            }
+        })
+    }
+
+    function join() {
+        const pw = document.getElementById("pw").value;
+        const pwConfirm = document.getElementById("pwConfirm").value;
+
+        if (pw != pwConfirm) {
+            alert("비밀번호가 맞지 않습니다.")
+        } else {
+            document.getElementById("joinForm").submit();
+            alert("회원가입이 완료되었습니다.")
+        }
+    }
+</script>
+
 <h1>회원가입 폼</h1>
 
-<form th:action="@{/customer/join}" th:object="${joinForm}" method="post">
-    <div th:replace="~{/global/form_errors :: formErrorsFragment}"></div>
+<form id="joinForm" th:action="@{/customer/join}" th:object="${joinForm}" method="post">
     <div>
         <span>이름</span>
         <input type="text" th:field="*{name}" placeholder="이름을 입력해주세요.">
@@ -12,15 +46,16 @@
     </div>
     <div>
         <span>비밀번호</span>
-        <input type="password" th:field="*{password}">
+        <input id="pw" type="password" th:field="*{password}" placeholder="비밀번호를 입력해주세요.">
     </div>
     <div>
         <span>비밀번호 확인</span>
-        <input type="password" th:field="*{passwordConfirm}">
+        <input id="pwConfirm" type="password" th:field="*{passwordConfirm}" placeholder="비밀번호를 한번 더 입력해주세요.">
     </div>
     <div>
         <span>이메일</span>
-        <input type="text" th:field="*{email}" placeholder="이메일을 입력해주세요.">
+        <input id="email" type="text" th:field="*{email}" placeholder="이메일을 입력해주세요.">
+        <input type="button" value="중복 확인" onclick="checkDuplicateEmail()">
     </div>
     <div>
         <span>주소</span>
@@ -31,7 +66,7 @@
         <input type="text" th:field="*{tel}" placeholder="'-' 뺴고 입력해주세요">
     </div>
     <div>
-        <input type="submit" value="회원가입" />
-        <a href="/" class="inline-flex">홈으로</a>
+        <input type="button" value="회원가입" onclick="join()"/>
     </div>
+    <a href="/" class="inline-flex">홈으로</a>
 </form>
