feat : set layout

--- a/src/main/resources/templates/customer/findPassword.html
+++ b/src/main/resources/templates/customer/findPassword.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        xmlns:th="http://www.thymeleaf.org"
+        layout:decorate="~{global/layouts/layout}">
+
+<div layout:fragment="content">
 <h1>비밀번호 찾기</h1>
 
 <form th:action="@{/customer/findPassword}" method="POST" th:object="${findPasswordForm}">
@@ -15,3 +22,5 @@
     </div>
     <a href="/" class="inline-flex">홈으로</a>
 </form>
+</div>
+</html>
