--- a/src/main/resources/templates/customer/modifyPassword.html
+++ b/src/main/resources/templates/customer/modifyPassword.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        xmlns:th="http://www.thymeleaf.org"
+        layout:decorate="~{global/layouts/layout}">
+
+<div layout:fragment="content">
 <h1>비밀번호 수정 페이지</h1>
 
 <form th:action="@{/customer/modifyPassword}" th:object="${modifyPasswordForm}" method="POST">
@@ -20,3 +27,5 @@
         <a href="/" class="inline-flex">홈으로</a>
     </div>
 </form>
+</div>
+</html>
