--- a/src/main/resources/templates/customer/profile.html
+++ b/src/main/resources/templates/customer/profile.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        xmlns:th="http://www.thymeleaf.org"
+        layout:decorate="~{global/layouts/layout}">
+
+<div layout:fragment="content">
 <div>이름 : <span th:text="${customer.name}"></span></div>
 <div>아이디 : <span th:text="${customer.username}"></span></div>
 <div>이메일 : <span th:text="${customer.email}"></span></div>
@@ -11,5 +18,6 @@
 <a href="/customer/modify" class="inline-flex" sec:authorize="isAuthenticated()">정보수정</a>
 <a href="/customer/modifyPassword" class="inline-flex" sec:authorize="isAuthenticated()">비밀번호 변경</a>
 <a href="/" class="inline-flex">홈으로</a>
-
+</div>
+</html>
 
