--- a/src/main/resources/templates/global/layouts/layout.html
+++ b/src/main/resources/templates/global/layouts/layout.html
@@ -19,10 +19,12 @@
     </main>
 
     <!-- 자바스크립트 Start -->
-    <th:block layout:fragment="script"></th:block>
+    <th:block layout:fragment="script">'
+        <script th:inline="javascript" type="text/javascript" th:src="@{/js/customer/join.js}"></script>
+    </th:block>
 
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script th:inline="javascript" type="text/javascript" th:src="@{/js/customer/common.js}"></script>
 </body>
 </html>
