필요없는 것 삭제

--- a/src/main/resources/templates/customer/profile.html
+++ b/src/main/resources/templates/customer/profile.html
@@ -13,7 +13,7 @@
 
 <a href="/customer/login" class="inline-flex" sec:authorize="isAnonymous()">로그인</a>
 <a href="/customer/join" class="inline-flex" sec:authorize="isAnonymous()">회원가입</a>
-<a href="javascript: document.logoutForm.submit();" class="inline-flex" sec:authorize="isAuthenticated()">로그아웃</a>.
+<a href="javascript: document.logoutForm.submit();" class="inline-flex" sec:authorize="isAuthenticated()">로그아웃</a>
 <form name="logoutForm" th:action="@{/customer/logout}" method="post" hidden></form>
 <a href="/customer/modify" class="inline-flex" sec:authorize="isAuthenticated()">정보수정</a>
 <a href="/customer/modifyPassword" class="inline-flex" sec:authorize="isAuthenticated()">비밀번호 변경</a>
