--- a/src/main/resources/templates/global/layouts/layout.html
+++ b/src/main/resources/templates/global/layouts/layout.html
@@ -19,7 +19,7 @@
     </main>
 
     <!-- 자바스크립트 Start -->
-    <th:block layout:fragment="script">'
+    <th:block layout:fragment="script">
         <script th:inline="javascript" type="text/javascript" th:src="@{/js/customer/join.js}"></script>
     </th:block>
 
