--- a/src/main/resources/templates/customer/join.html
+++ b/src/main/resources/templates/customer/join.html
@@ -5,43 +5,88 @@
         layout:decorate="~{global/layouts/layout}">
 
 <div layout:fragment="content">
-    <h1>회원가입 폼</h1>
+    <div class="container">
+        <div class="input-form-backgroud row">
+            <div class="input-form col-md-12 mx-auto">
+                <h4 class="mb-3">회원가입</h4>
+                <form id="joinForm" class="validation-form" th:action="@{/customer/join}" th:object="${joinForm}" method="post">
+                    <div class="mb-3">
+                        <label for="name">이름</label>
+                        <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="이름을 입력해주세요." required>
+                        <div class="invalid-feedback">
+                            이름을 입력해주세요.
+                        </div>
+                    </div>
 
-    <form id="joinForm" th:action="@{/customer/join}" th:object="${joinForm}" method="post">
-        <div>
-            <span>이름</span>
-            <input type="text" th:field="*{name}" placeholder="이름을 입력해주세요.">
+                    <div class="mb-3">
+                        <label for="username">아이디</label>
+                        <input type="text" class="form-control" id="username" th:field="*{username}" placeholder="아이디를 입력해주세요." required>
+                        <div class="invalid-feedback">
+                            아이디를 입력해주세요.
+                        </div>
+                        <div>
+                            <input type="button" value="중복확인" class="btn btn-outline-primary" onclick="checkDuplicateUsername()" />
+                        </div>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="pw">비밀번호</label>
+                        <input type="password" class="form-control" id="pw" th:field="*{password}" placeholder="비밀번호를 입력해주세요." required>
+                        <div class="invalid-feedback">
+                            비밀번호를 입력해주세요.
+                        </div>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="pw">비밀번호 확인</label>
+                        <input type="password" class="form-control" id="pwConfirm" th:field="*{passwordConfirm}" placeholder="비밀번호를 한번 더 입력해주세요." required>
+                        <div class="invalid-feedback">
+                            비밀번호를 입력해주세요.
+                        </div>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="email">이메일</label>
+                        <input type="email" class="form-control" id="email" th:field="*{email}" placeholder="you@example.com" required>
+                        <div class="invalid-feedback">
+                            이메일을 입력해주세요.
+                        </div>
+                        <div>
+                            <input type="button" value="중복 확인" class="btn btn-primary" onclick="checkDuplicateEmail()">
+                        </div>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="address">주소</label>
+                        <input type="text" class="form-control" id="address" th:field="*{address}" placeholder="서울특별시 강남구" required>
+                        <div class="invalid-feedback">
+                            주소를 입력해주세요.
+                        </div>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="address2">상세주소<span class="text-muted">&nbsp;(필수 아님)</span></label>
+                        <input type="text" class="form-control" id="address2" th:field="*{address2}" placeholder="상세주소를 입력해주세요.">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="tel">전화번호</label>
+                        <input type="text" class="form-control" id="tel" th:field="*{tel}" placeholder="'-'빼고 입력해주세요." required>
+                        <div class="invalid-feedback">
+                            전화번호를 입력해주세요.
+                        </div>
+                    </div>
+
+                    <hr class="mb-4">
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="aggrement" required>
+                        <label class="custom-control-label" for="aggrement">개인정보 수집 및 이용에 동의합니다.</label>
+                    </div>
+                    <div class="mb-4"></div>
+                    <button class="btn btn-primary btn-lg btn-block" onclick="join()">가입 완료</button>
+                </form>
+            </div>
         </div>
-        <div>
-            <span>아이디</span>
-            <input id="username" type="text" th:field="*{username}" placeholder="아이디를 입력해주세요.">
-            <input type="button" value="중복 확인" onclick="checkDuplicateUsername()">
-        </div>
-        <div>
-            <span>비밀번호</span>
-            <input id="pw" type="password" th:field="*{password}" placeholder="비밀번호를 입력해주세요.">
-        </div>
-        <div>
-            <span>비밀번호 확인</span>
-            <input id="pwConfirm" type="password" th:field="*{passwordConfirm}" placeholder="비밀번호를 한번 더 입력해주세요.">
-        </div>
-        <div>
-            <span>이메일</span>
-            <input id="email" type="text" th:field="*{email}" placeholder="이메일을 입력해주세요.">
-            <input type="button" value="중복 확인" onclick="checkDuplicateEmail()">
-        </div>
-        <div>
-            <span>주소</span>
-            <input type="text" th:field="*{address}" placeholder="주소를 입력해주세요.">
-        </div>
-        <div>
-            <span>전화번호</span>
-            <input type="text" th:field="*{tel}" placeholder="'-' 뺴고 입력해주세요">
-        </div>
-        <div>
-            <input type="button" value="회원가입" onclick="join()"/>
-        </div>
-        <a href="/" class="inline-flex">홈으로</a>
     </form>
 </div>
 
