--- a/src/main/resources/templates/global/layouts/layout.html
+++ b/src/main/resources/templates/global/layouts/layout.html
@@ -5,11 +5,39 @@
         lang="ko">
 <head>
     <title>Meal-Kit</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
+    <style>
+        /*body {*/
+        /*    min-height: 100vh;*/
+
+        /*    background: -webkit-gradient(linear, left bottom, right top, from(#92b5db), to(#1d466c));*/
+        /*    background: -webkit-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);*/
+        /*    background: -moz-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);*/
+        /*    background: -o-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);*/
+        /*    background: linear-gradient(to top right, #92b5db 0%, #1d466c 100%);*/
+        /*}*/
+
+        .input-form {
+            max-width: 680px;
+
+            margin-top: 80px;
+            padding: 32px;
+
+            background: #fff;
+            -webkit-border-radius: 10px;
+            -moz-border-radius: 10px;
+            border-radius: 10px;
+            -webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+            -moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+            box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15)
+        }
+    </style>
 </head>
 <body>
     <main>
