feat : 버튼 outline만 출력

--- a/src/main/resources/templates/customer/join.html
+++ b/src/main/resources/templates/customer/join.html
@@ -52,7 +52,7 @@
                             이메일을 입력해주세요.
                         </div>
                         <div>
-                            <input type="button" value="중복 확인" class="btn btn-primary" onclick="checkDuplicateEmail()">
+                            <input type="button" value="중복 확인" class="btn btn-outline-primary" onclick="checkDuplicateEmail()">
                         </div>
                     </div>
 
