--- a/src/main/resources/templates/customer/login.html
+++ b/src/main/resources/templates/customer/login.html
@@ -4,29 +4,36 @@
         xmlns:th="http://www.thymeleaf.org"
         layout:decorate="~{global/layouts/layout}">
 
-<div layout:fragment="content">
-<h1>로그인 페이지</h1>
-
-<form th:action="@{/customer/login}" method="post">
-    <div th:if="${param.error}">
-        <div class="alert alert-danger">
-            사용자ID 또는 비밀번호를 확인해 주세요.
+<th:block layout:fragment="content">
+    <div id="container">
+        <!-- login Box -->
+        <div class="login-box">
+            <div id="loginBoxTitle">Meal-Commerce</div>
+            <form th:action="@{/customer/login}" method="post">
+                <div class="form-group">
+                    <label>아이디</label>
+                    <input type="text" name="username" id="uid" class="form-control" style="text-transform:uppercase;ime-mode:disabled">
+                </div>
+                <div class="form-group">
+                    <label>비밀번호</label>
+                    <input type="password" name="password" id="upw" class="form-control" autocomplete="off">
+                </div>
+                <div id="login-btn-box">
+                    <div style=""><span>아이디 저장</span> <input type="checkbox" id="workSite" name="worksite" style="margin-bottom: 5px"> </div>
+                    <div style=""><input type="submit" id="btnLogin" value="로그인" class="btn btn-danger"></div>
+                </div>
+            </form>
         </div>
-    </div>
-    <div>
-      <span>아이디</span>
-      <input type="text" name="username" placeholder="아이디를 입력해주세요.">
-    </div>
-    <div>
-      <span>비밀번호</span>
-      <input type="password" name="password">
-    </div>
-    <div>
-      <input type="submit" value="로그인" />
-    </div>
-    <a href="/customer/findUsername" class="inline-flex">아이디 찾기</a>
-    <a href="/customer/findPassword" class="inline-flex">비밀번호 찾기</a>
-    <a href="/" class="inline-flex">홈으로</a>
-</form>
-</div>
+        <div class="login-menu-box">
+            <a href="/customer/findUsername" class="inline-flex">아이디 찾기</a>
+            <a href="/customer/findPassword" class="inline-flex left-margin">비밀번호 찾기</a>
+            <a href="/" class="inline-flex left-border left-margin">홈으로</a>
+        </div>
+    </div><!-- login Box //-->
+</th:block>
+
+
+<!-- Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
 </html>
