--- a/src/main/resources/templates/global/layouts/layout.html
+++ b/src/main/resources/templates/global/layouts/layout.html
@@ -13,16 +13,68 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
     <style>
-        /*body {*/
-        /*    min-height: 100vh;*/
+        body {
+            background-size: 100%;
+            font-size: 0.75rem;
+        }
 
-        /*    background: -webkit-gradient(linear, left bottom, right top, from(#92b5db), to(#1d466c));*/
-        /*    background: -webkit-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);*/
-        /*    background: -moz-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);*/
-        /*    background: -o-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);*/
-        /*    background: linear-gradient(to top right, #92b5db 0%, #1d466c 100%);*/
-        /*}*/
+        a {
+            text-decoration-line: none;
+            color: black;
+        }
 
+        /* login css */
+        #loginBoxTitle {
+            color:#000000;
+            font-weight: bold;
+            font-size: 1.8rem;
+            text-transform: uppercase;
+            padding: 5px;
+            margin-bottom: 15px;
+            background: linear-gradient(to right, #270a09, #8ca6ce);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        input[type="button"] {
+            font-size: 0.75rem;
+            padding: 5px 10px;
+        }
+        .login-box {
+            margin:150px auto;
+            margin-bottom: 0;
+            background-color: rgba(255, 255, 255, 1);
+            border-radius: 10px;
+            padding:40px 30px;
+            border:5px solid #0e0e0e;width:350px;
+            filter: drop-shadow(0px 0px 10px rgba(0,0,0,.5));
+        }
+
+        .login-menu-box {
+            margin-top: 10px;
+            margin-bottom: 150px;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+        }
+
+        .left-margin {
+            margin-left: 30px;
+        }
+
+        .form-group label {
+            font-size: 0.75rem;
+            margin:5px 0;
+        }
+
+        #login-btn-box{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-top:10px;
+        }
+
+        /* join css */
         .input-form {
             max-width: 680px;
 
@@ -36,6 +88,13 @@
             -webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
             -moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
             box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15)
+        }
+
+        input::placeholder {
+            color: rgb(211, 211, 211);
+            font-style: italic;
+            font-weight: bold;
+            font-size: small;
         }
     </style>
 </head>
