feat : modify join page design

--- a/src/main/resources/templates/global/layouts/layout.html
+++ b/src/main/resources/templates/global/layouts/layout.html
@@ -13,6 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
     <style>
+        /* custom css */
         body {
             background-size: 100%;
             font-size: 0.75rem;
@@ -21,6 +22,20 @@
         a {
             text-decoration-line: none;
             color: black;
+        }
+
+        .important-size {
+            width:88% !important;
+        }
+
+        .btn-size {
+            padding: 9px 10px !important;
+            margin-bottom: 5px;
+            margin-left: 2px;
+        }
+
+        .join-btn {
+            margin-left: 500px;
         }
 
         /* login css */
