--- a/src/main/resources/templates/customer/join.html
+++ b/src/main/resources/templates/customer/join.html
@@ -7,7 +7,7 @@
 <div layout:fragment="content">
     <div class="container">
         <div class="input-form-backgroud row">
-            <div class="input-form col-md-12 mx-auto">
+            <div class="input-form col-md-12 mx-auto" style="margin-top: 30px">
                 <h4 class="mb-3">회원가입</h4>
                 <form id="joinForm" class="validation-form" th:action="@{/customer/join}" th:object="${joinForm}" method="post">
                     <div class="mb-3">
@@ -20,12 +20,12 @@
 
                     <div class="mb-3">
                         <label for="username">아이디</label>
-                        <input type="text" class="form-control" id="username" th:field="*{username}" placeholder="아이디를 입력해주세요." required>
+                        <div>
+                            <input type="text" class="form-control important-size d-inline" id="username" th:field="*{username}" placeholder="아이디를 입력해주세요." required>
+                            <input type="button" value="중복 확인" class="btn btn-outline-primary btn-size" onclick="checkDuplicateUsername()" />
+                        </div>
                         <div class="invalid-feedback">
                             아이디를 입력해주세요.
-                        </div>
-                        <div>
-                            <input type="button" value="중복확인" class="btn btn-outline-primary" onclick="checkDuplicateUsername()" />
                         </div>
                     </div>
 
@@ -47,12 +47,12 @@
 
                     <div class="mb-3">
                         <label for="email">이메일</label>
-                        <input type="email" class="form-control" id="email" th:field="*{email}" placeholder="you@example.com" required>
+                        <div>
+                            <input type="email" class="form-control important-size d-inline" id="email" th:field="*{email}" placeholder="you@example.com" required>
+                            <input type="button" value="중복 확인" class="btn btn-outline-primary btn-size" onclick="checkDuplicateEmail()">
+                        </div>
                         <div class="invalid-feedback">
                             이메일을 입력해주세요.
-                        </div>
-                        <div>
-                            <input type="button" value="중복 확인" class="btn btn-outline-primary" onclick="checkDuplicateEmail()">
                         </div>
                     </div>
 
@@ -83,7 +83,9 @@
                         <label class="custom-control-label" for="aggrement">개인정보 수집 및 이용에 동의합니다.</label>
                     </div>
                     <div class="mb-4"></div>
-                    <button class="btn btn-primary btn-lg btn-block" onclick="join()">가입 완료</button>
+                    <div class="join-btn">
+                        <button class="btn btn-primary btn-lg btn-block" onclick="join()">회원 가입</button>
+                    </div>
                 </form>
             </div>
         </div>
