--- a/src/main/resources/templates/global/layouts/layout.html
+++ b/src/main/resources/templates/global/layouts/layout.html
@@ -38,6 +38,10 @@
             margin-left: 500px;
         }
 
+        .findUsername-menu-box {
+            margin-bottom: 176px;
+        }
+
         /* login css */
         #loginBoxTitle {
             color:#000000;
@@ -56,6 +60,7 @@
             padding: 5px 10px;
         }
         .login-box {
+            margin-top: 130px;
             margin:150px auto;
             margin-bottom: 0;
             background-color: rgba(255, 255, 255, 1);
@@ -67,7 +72,7 @@
 
         .login-menu-box {
             margin-top: 10px;
-            margin-bottom: 150px;
+            margin-bottom: 100px;
             text-align: center;
             display: flex;
             justify-content: center;
