feat : design findPassword page

--- a/src/main/resources/templates/global/layouts/layout.html
+++ b/src/main/resources/templates/global/layouts/layout.html
@@ -42,6 +42,10 @@
             margin-bottom: 176px;
         }
 
+        .findPassword-menu-box {
+            margin-bottom: 128px;
+        }
+
         /* login css */
         #loginBoxTitle {
             color:#000000;
