--- a/src/main/resources/templates/customer/findPassword.html
+++ b/src/main/resources/templates/customer/findPassword.html
@@ -5,22 +5,24 @@
         layout:decorate="~{global/layouts/layout}">
 
 <div layout:fragment="content">
-<h1>비밀번호 찾기</h1>
-
-<form th:action="@{/customer/findPassword}" method="POST" th:object="${findPasswordForm}">
-    <div>
-        <span>아이디</span>
-        <input type="text" th:field="*{username}">
+    <div class="container">
+        <div class="login-box">
+            <div id="loginBoxTitle">Meal-Commerce</div>
+            <form th:action="@{/customer/findPassword}" method="POST" th:object="${findPasswordForm}">
+                <div class="form-group">
+                    <label>아이디</label>
+                    <input type="text" name="username" id="uid" class="form-control" th:field="*{username}" style="text-transform:uppercase;ime-mode:disabled">
+                </div>
+                <div class="form-group">
+                    <label>이메일</label>
+                    <input type="email" name="email" class="form-control" th:field="*{email}">
+                </div>
+                <div id="login-btn-box">
+                    <div style=""><input type="submit" value="비밀번호 찾기" class="btn btn-primary" style="margin-left: 167px"></div>
+                </div>
+            </form>
+        </div>
+        <div class="findPassword-menu-box"></div>
     </div>
-    <div>
-        <span>이메일</span>
-        <input type="email" th:field="*{email}">
-    </div>
-    <div>
-        <span>찾기</span>
-        <input type="submit" value="찾기">
-    </div>
-    <a href="/" class="inline-flex">홈으로</a>
-</form>
 </div>
 </html>
