feat : findUsername, findPassword 하단 바 추가

--- a/src/main/resources/templates/customer/findPassword.html
+++ b/src/main/resources/templates/customer/findPassword.html
@@ -22,7 +22,11 @@
                 </div>
             </form>
         </div>
-        <div class="findPassword-menu-box"></div>
+        <div class="findPassword-menu-box">
+            <a href="/customer/login" class="inline-flex">로그인</a>
+            <a href="/customer/findUsername" class="inline-flex left-margin">아이디 찾기</a>
+            <a href="/" class="inline-flex left-border left-margin">홈으로</a>
+        </div>
     </div>
 </div>
 </html>
