--- a/src/main/resources/templates/customer/findUsername.html
+++ b/src/main/resources/templates/customer/findUsername.html
@@ -21,7 +21,11 @@
                 </div>
             </form>
         </div>
-        <div class="findUsername-menu-box"></div>
+        <div class="findUsername-menu-box">
+            <a href="/customer/login" class="inline-flex">로그인</a>
+            <a href="/customer/findPassword" class="inline-flex left-margin">비밀번호 찾기</a>
+            <a href="/" class="inline-flex left-border left-margin">홈으로</a>
+        </div>
     </div>
 </div>
 </html>
