--- a/src/main/resources/templates/global/layouts/layout.html
+++ b/src/main/resources/templates/global/layouts/layout.html
@@ -39,11 +39,19 @@
         }
 
         .findUsername-menu-box {
-            margin-bottom: 176px;
+            margin-top: 10px;
+            margin-bottom: 148px;
+            text-align: center;
+            display: flex;
+            justify-content: center;
         }
 
         .findPassword-menu-box {
-            margin-bottom: 128px;
+            margin-top: 10px;
+            margin-bottom: 100px;
+            text-align: center;
+            display: flex;
+            justify-content: center;
         }
 
         /* login css */
