--- a/src/main/resources/templates/customer/findPassword.html
+++ b/src/main/resources/templates/customer/findPassword.html
@@ -8,17 +8,17 @@
     <div class="container">
         <div class="login-box">
             <div id="loginBoxTitle">Meal-Commerce</div>
-            <form th:action="@{/customer/findPassword}" method="POST" th:object="${findPasswordForm}">
+            <form id="findForm" th:action="@{/customer/findPassword}" method="POST" th:object="${findPasswordForm}">
                 <div class="form-group">
                     <label>아이디</label>
-                    <input type="text" name="username" id="uid" class="form-control" th:field="*{username}" style="text-transform:uppercase;ime-mode:disabled">
+                    <input type="text" name="username" id="uid" class="form-control" th:field="*{username}" style="ime-mode:disabled">
                 </div>
                 <div class="form-group">
                     <label>이메일</label>
                     <input type="email" name="email" class="form-control" th:field="*{email}">
                 </div>
                 <div id="login-btn-box">
-                    <div style=""><input type="submit" value="비밀번호 찾기" class="btn btn-primary" style="margin-left: 167px"></div>
+                    <div style=""><button class="btn btn-primary" style="margin-left: 165px" onclick="findCheck()">비밀번호 찾기</button></div>
                 </div>
             </form>
         </div>
