--- a/src/main/resources/templates/customer/login.html
+++ b/src/main/resources/templates/customer/login.html
@@ -12,7 +12,7 @@
             <form th:action="@{/customer/login}" method="post">
                 <div class="form-group">
                     <label>아이디</label>
-                    <input type="text" name="username" id="uid" class="form-control" style="text-transform:uppercase;ime-mode:disabled">
+                    <input type="text" name="username" id="uid" class="form-control" style="ime-mode:disabled">
                 </div>
                 <div class="form-group">
                     <label>비밀번호</label>
